After course finished state.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
               stroke-linejoin="round"
             />
           </svg>
-
           <a href="/">Javascript Flash Course</a>
         </div>
 
@@ -133,7 +132,7 @@
       <section id="home" class="container greeting-section">
         <div class="left-side">
           <h1 id="greeting">Good Morning!</h1>
-          <p id="weather">The weather is cloudy in London and it’s 22°C outside. </p>
+          <p id="weather">Retrieving weather information ... </p>
           <div class="weather-group">
             <input
               type="radio"
@@ -169,13 +168,8 @@
       </section>
 
       <section id="gallery" class="gallery-section">
-        <img src="/assets/gallery/image1.jpg" alt="image 1" />
-
-        <div class="thumbnails">
-          <img src="./assets/gallery/image1.jpg" alt="Thumbnail Image 1" data-array-index="0" data-selected="true">
-          <img src="./assets/gallery/image2.jpg" alt="Thumbnail Image 2" data-array-index="1" data-selected="false">
-          <img src="./assets/gallery/image3.jpg" alt="Thumbnail Image 3" data-array-index="2" data-selected="false">
-        </div>
+        <img src="" alt="" />
+        <div class="thumbnails"></div>
       </section>
 
       <section id="products" class="container products-section">
@@ -199,36 +193,7 @@
           <span class="glider"></span>
         </div>
 
-        <div class="products-area">
-          <div class="product-item">
-             <img src="./assets/products/img6.png" alt="AstroFiction">
-             <div class="product-details">
-                <h3 class="product-title">AstroFiction</h3>
-                <p class="product-author">John Doe</p>
-                <p class="price-title">Price</p>
-                <p class="product-price">$ 49.90</p>
-             </div>
-          </div>
-          <div class="product-item">
-             <img src="./assets/products/img1.png" alt="Space Odissey">
-             <div class="product-details">
-                <h3 class="product-title">Space Odissey</h3>
-                <p class="product-author">Marie Anne</p>
-                <p class="price-title">Price</p>
-                <p class="product-price">$ 35.00</p>
-             </div>
-          </div>
-          <div class="product-item">
-             <img src="./assets/products/img2.png" alt="Doomed City">
-             <div class="product-details">
-                <h3 class="product-title">Doomed City</h3>
-                <p class="product-author">Jason Cobert</p>
-                <p class="price-title">Price</p>
-                <p class="product-price">Free</p>
-             </div>
-          </div>
-          
-       </div>
+        <div class="products-area"></div>
 
       </section>
 
@@ -271,6 +236,7 @@
     </main>
 
     <footer></footer>
+  <script src="main.js"></script>
 
   </body>
 </html>
